crates/roomrs/tests/ui/fail/dao_two_sql_attrs.stderr
error: SQL 속성이 2개 이상입니다 — 하나만 지정하세요
 --> tests/ui/fail/dao_two_sql_attrs.rs:7:5
  |
7 |     #[delete("DELETE FROM todos")]
  |     ^
